[gd_scene load_steps=7 format=3 uid="uid://b35x8dvw3k6h6"]

[ext_resource type="Texture2D" uid="uid://cvbnb4mkv6l7g" path="res://Assets/Shop/Statue.png" id="1_0dmtm"]
[ext_resource type="Script" path="res://Scripts/Level/shop_manager.gd" id="2_r2agx"]
[ext_resource type="Texture2D" uid="uid://hghlwrn5npyg" path="res://Assets/Shop/Final_Crowbar.png" id="3_5mdbf"]
[ext_resource type="Texture2D" uid="uid://bsndys1lams2i" path="res://Assets/Pipes/JPipes/greendot.png" id="4_mhr7h"]
[ext_resource type="Texture2D" uid="uid://bgeypxqlttnet" path="res://Assets/Shop/Final_CHeese.png" id="5_5xl2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fw16i"]
size = Vector2(126.197, 126.826)

[node name="Shop" type="Node2D"]
z_index = -1
position = Vector2(9, -13)
script = ExtResource("2_r2agx")

[node name="Statue" type="Sprite2D" parent="."]
modulate = Color(0.658824, 0.898039, 0.611765, 1)
position = Vector2(-12.125, -115.125)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_0dmtm")

[node name="Items" type="Node2D" parent="."]
position = Vector2(-11.125, -22.125)
scale = Vector2(0.53, 0.53)

[node name="Crowbar" type="Sprite2D" parent="Items"]
position = Vector2(-162.028, 28.5377)
scale = Vector2(0.105, 0.105)
texture = ExtResource("3_5mdbf")

[node name="Area2D" type="Area2D" parent="Items/Crowbar"]
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Crowbar/Area2D"]
position = Vector2(3.05176e-05, 1.52588e-05)
shape = SubResource("RectangleShape2D_fw16i")

[node name="Hint" type="Sprite2D" parent="Items"]
position = Vector2(0, 29.2571)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_mhr7h")

[node name="Area2D" type="Area2D" parent="Items/Hint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Hint/Area2D"]
position = Vector2(1.85966e-05, 3.8147e-06)
shape = SubResource("RectangleShape2D_fw16i")

[node name="Cheese" type="Sprite2D" parent="Items"]
position = Vector2(175.708, 26.6509)
scale = Vector2(0.22, 0.22)
texture = ExtResource("5_5xl2r")

[node name="Area2D" type="Area2D" parent="Items/Cheese"]
position = Vector2(3.05176e-05, -7.62939e-06)
scale = Vector2(3.61, 3.61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Cheese/Area2D"]
shape = SubResource("RectangleShape2D_fw16i")

[node name="HintIndicator" type="RichTextLabel" parent="."]
visible = false
offset_left = -68.0
offset_top = -182.0
offset_right = 55.0
offset_bottom = -50.0
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]You will need to pay money at the top,  but
if you have the cheese, winning is free!
Use the crowbar for shortcuts in pipes.[center]"
scroll_active = false

[connection signal="body_entered" from="Items/Crowbar/Area2D" to="." method="_on_area_crowbar_entered"]
[connection signal="body_exited" from="Items/Crowbar/Area2D" to="." method="_on_area_crowbar_exited"]
[connection signal="body_entered" from="Items/Hint/Area2D" to="." method="_on_area_wrench_entered"]
[connection signal="body_exited" from="Items/Hint/Area2D" to="." method="_on_area_wrench_exited"]
[connection signal="body_entered" from="Items/Cheese/Area2D" to="." method="_on_area_cheese_entered"]
[connection signal="body_exited" from="Items/Cheese/Area2D" to="." method="_on_area_cheese_exited"]
